<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:context=".Farmerlog">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/teal_400_7f"
            android:elevation="4dp"
            app:titleTextColor="@color/white_A700" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#c9ddc3"
            android:layout_below="@+id/toolbar">
            <FrameLayout android:id="@+id/frameBagofricedet"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
               >
                <FrameLayout android:id="@+id/frameStackvectortwo"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_424pxv"
                    android:layout_marginBottom="@dimen/_10pxv" android:layout_width="match_parent">
                    <ImageView android:id="@+id/imageVectorTwo"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_424pxh"
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_vector2"/>
                    <LinearLayout android:id="@+id/linearRowarrowleft"
                        android:layout_gravity="top|center"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_21pxv"
                        android:layout_marginEnd="@dimen/_17pxh"
                        android:layout_marginStart="@dimen/_17pxh"
                        android:layout_marginTop="@dimen/_21pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <LinearLayout android:id="@+id/linearColumnarrowleft"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_48pxv"
                            android:layout_weight="0.53"
                            android:layout_width="0dp" android:orientation="vertical">
                            <ImageView android:id="@+id/imageArrowleft"
                                android:layout_gravity="start"
                                android:layout_height="@dimen/_16pxh"
                                android:layout_marginEnd="@dimen/_10pxh"
                                android:layout_marginStart="@dimen/_6pxh"
                                android:layout_width="@dimen/_16pxh"
                                android:scaleType="fitXY"
                                android:src="@drawable/img_arrowleft"
                                tools:ignore="ContentDescription"
                                tools:src="@drawable/img_arrowleft"/>
                            <TextView android:gravity="start"
                                android:id="@+id/txtDescription"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/_10pxh"
                                android:layout_marginTop="@dimen/_46pxv"
                                android:layout_width="match_parent"
                                android:text="@{bagOfRiceDetailsVM.bagOfRiceDetailsModel.txtDescription}"

                                tools:text="@string/msg_name_bhalubha"/>
                        </LinearLayout>
                        <ImageView android:id="@+id/imageRectangleSixty"
                            android:layout_height="@dimen/_173pxh"
                            android:layout_marginTop="@dimen/_16pxv"
                            android:layout_width="@dimen/_150pxh"
                            android:scaleType="fitXY"

                            tools:ignore="ContentDescription"
                            tools:src="@drawable/img_rectangle60"/>
                    </LinearLayout>
                </FrameLayout>

                <LinearLayout
                    android:id="@+id/linearColumndescriptionOne"
                    android:layout_width="match_parent"
                    android:layout_height="416dp"
                    android:layout_below="@+id/frameStackvectortwo"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_marginEnd="@dimen/_1pxh"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:background="@drawable/prod_btm"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearColumndetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_28pxv"
                        android:layout_marginEnd="@dimen/_15pxh"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/linearRowdetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_6pxh"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:gravity="start"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtDetails"

                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_1pxv"
                                android:layout_weight="0.31"
                                android:ellipsize="end"
                                android:singleLine="true"
                                tools:text="@string/lbl_details" />

                            <TextView
                                android:id="@+id/txtGallery"

                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_59pxh"
                                android:layout_marginTop="@dimen/_1pxv"
                                android:layout_weight="0.31"
                                android:ellipsize="end"
                                android:singleLine="true"
                                tools:text="@string/lbl_gallery" />

                            <TextView
                                android:id="@+id/txtLocation"

                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_57pxh"
                                android:layout_marginTop="@dimen/_1pxv"
                                android:layout_marginBottom="@dimen/_1pxv"
                                android:layout_weight="0.38"
                                android:ellipsize="end"
                                android:singleLine="true"
                                tools:text="@string/lbl_location" />
                        </LinearLayout>

                        <FrameLayout
                            android:id="@+id/frameStacklinethirteen"
                            android:layout_width="@dimen/_327pxh"
                            android:layout_height="@dimen/_3pxv"
                            android:layout_gravity="start"
                            android:layout_marginTop="@dimen/_6pxv">

                            <View
                                android:id="@+id/lineLineThirteen"
                                android:layout_width="@dimen/_327pxh"
                                android:layout_height="@dimen/_1pxv"
                                android:layout_gravity="top|start"
                                android:layout_marginBottom="@dimen/_10pxv"
                                android:background="@color/black_900" />

                            <View
                                android:id="@+id/lineLineFourteen"
                                android:layout_width="@dimen/_70pxh"
                                android:layout_height="@dimen/_3pxv"
                                android:layout_gravity="start"
                                android:layout_marginTop="@dimen/_1pxv"
                                android:layout_marginEnd="@dimen/_10pxh"
                                android:background="@color/black_900" />
                        </FrameLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtDescriptionOne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                       android:padding="@dimen/_7pxh"
                        android:textAlignment="textStart"
                        android:gravity="start"
                        tools:text="@string/msg_millets_have_li" />
                </LinearLayout>
                <LinearLayout android:id="@+id/linearColumnmoreinfo"
                    android:layout_gravity="bottom|center"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/teal_200"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/prod_btm">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtMoreinfo"
                        android:layout_gravity="start"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_28pxh"
                        android:layout_marginStart="@dimen/_28pxh"
                        android:layout_marginTop="@dimen/_13pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        tools:text="@string/lbl_more_info"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtWeburl"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_20pxv"
                        android:layout_marginEnd="@dimen/_28pxh"
                        android:layout_marginStart="@dimen/_28pxh"
                        android:layout_marginTop="@dimen/_18pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        tools:text="@string/msg_https_youtu_b"/>
                </LinearLayout>
            </FrameLayout>


        </RelativeLayout>






    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigation"
        app:subheaderColor="#4FBDBA"
        app:background="@drawable/prod_btm"
        app:itemIconTint="#4FBDBA"
        app:itemTextColor="#35858B"
        app:headerLayout="@layout/navigator"
        app:menu="@menu/drawer"
        android:background="@color/white"
        android:layout_gravity="start"
        />
</androidx.drawerlayout.widget.DrawerLayout>